Fix tweet using white spaces & cursor to pointer on icon hover

--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -128,6 +128,7 @@
 
     &:hover {  
       color:coral;
+      cursor: pointer;
     }
   }
 
